cabal-version: 1.12

name:           thl
version:        0.1.0.0
homepage:       https://github.com/githubuser/thl#readme
bug-reports:    https://github.com/githubuser/thl/issues
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/thl

library
  exposed-modules:
      Control.Monad.THLogger
  other-modules:
      Logger.Logger
      Logger.Quasi
      Paths_thl
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , fast-logger
    , monad-logger
    , mtl
    , string-interpolate
    , template-haskell
    , time
  default-language: Haskell2010
